--- a/css/style.css
+++ b/css/style.css
@@ -58,15 +58,14 @@ body {
 .container {
   overflow: hidden;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   gap: 50px;
 }
 
 .container .img1 {
-  width: 70%;
-  height: 70%;
+  width: 100%;
+  height: 300px;
 }
 
 .banner {
@@ -75,13 +74,14 @@ body {
 }
 
 .h1 {
-  margin-left: 67px;
+  left: 0;
+  right: 0;
+  bottom: 3px;
   cursor: pointer;
   height: 70px;
   color: white;
   position: absolute;
-  top: 77%;
-  width: 70%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -149,13 +149,14 @@ body {
 }
 @media screen and (max-width: 480px) {
   .h1 {
-    margin-left: 132px;
+    left: 0;
+    right: 0;
+    bottom: 3px;
     cursor: pointer;
     height: 70px;
     color: white;
     position: absolute;
-    top: 88%;
-    width: 70%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
   }
 }
@@ -173,81 +174,14 @@ body {
 }
 @media screen and (min-width: 931px) and (max-width: 1428px) {
   .h1 {
-    margin-left: 67px;
+    left: 0;
+    right: 0;
+    bottom: 3px;
     cursor: pointer;
     height: 70px;
     color: white;
     position: absolute;
-    top: 77%;
-    width: 70%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
   }
-  .h1 {
-    margin-left: 44px;
-    cursor: pointer;
-    height: 70px;
-    color: white;
-    position: absolute;
-    top: 65%;
-    width: 70%;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-}
-.test:hover {
-  display: inline-block;
-  margin: 0 0.5rem;
-  animation: bounce;
-  /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 2s;
-  /* don't forget to set a duration! */
-}
-
-/* ---- reset ---- */
-/* ---- particles.js container ---- */
-#particles-js {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: #1ca3e1;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-/* ---- stats.js ---- */
-.count-particles {
-  background: #121285;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: 0.8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles {
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
-}
-
-#stats {
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-
-.count-particles {
-  border-radius: 0 0 3px 3px;
 }/*# sourceMappingURL=style.css.map */
