--- a/css/style.scss
+++ b/css/style.scss
@@ -1,61 +1,3 @@
-// @import url("https://fonts.googleapis.com/css?family=Barlow|Barlow+Condensed&display=swap");
-// * {
-//     box-sizing: border-box;
-//     padding: 0;
-//     margin: 0;
-// }
-// /* position the svg and div wrapping the controls one atop the other */
-// body {
-//     min-height: 100vh;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-//     // background: #262728;
-//     font-family: "Barlow", sans-serif;
-// }
-// /* have the clock describing the svg expand to cover a sizeable portion of the viewport */
-// svg {
-//     margin-top: 1rem;
-//     width: 5rem;
-//     height: auto;
-//     filter: url(#shadow-large);
-// }
-// svg text {
-//     font-family: "Barlow Condensed", sans-serif;
-// }
-// /* display the controls side by side */
-// .controls {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-top: 2rem;
-// }
-// /* display the button+span elements in columns */
-// .controls div {
-//     text-align: center;
-//     display: flex;
-//     flex-direction: column;
-//     margin: 1rem;
-// }
-// /* style the buttons with the same colors used for the clock */
-// .controls div button {
-//     border: none;
-//     border-radius: 50%;
-//     background: #ea3f3f;
-//     padding: 0.25rem;
-//     color: #fff;
-//     width: 48px;
-//     height: 48px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     font-size: 1.5rem;
-//     filter: url(#shadow-large);
-//     margin: 0.5rem 0;
-// }
-// .controls div span {
-//     color: #fff;
-// }
 * {
     margin: 0;
     padding: 0;
@@ -116,15 +58,15 @@ body {
 .container {
     overflow: hidden;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    // grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
     gap: 50px;
 }
 
 .container .img1 {
-    width: 70%;
-    height: 70%;
+    width: 100%;
+    height: 300px;
 }
 
 .banner {
@@ -133,13 +75,16 @@ body {
 }
 
 .h1 {
-    margin-left: 67px;
+    // margin-left: 67px;
+    left: 0;
+    right: 0;
+    bottom: 3px;
     cursor: pointer;
     height: 70px;
     color: white;
     position: absolute;
-    top: 77%;
-    width: 70%;
+    // top: 77%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
@@ -208,13 +153,15 @@ body {
 
 @media screen and (max-width: 480px) {
     .h1 {
-        margin-left: 132px;
+        left: 0;
+        right: 0;
+        bottom: 3px;
         cursor: pointer;
         height: 70px;
         color: white;
         position: absolute;
-        top: 88%;
-        width: 70%;
+        // top: 77%;
+        width: 100%;
         background-color: rgba(0, 0, 0, 0.7);
     }
 }
@@ -235,96 +182,15 @@ body {
 
 @media screen and (min-width: 931px) and (max-width:1428px) {
     .h1 {
-        margin-left: 67px;
+        left: 0;
+        right: 0;
+        bottom: 3px;
         cursor: pointer;
         height: 70px;
         color: white;
         position: absolute;
-        top: 77%;
-        width: 70%;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-    .h1 {
-        margin-left: 44px;
-        cursor: pointer;
-        height: 70px;
-        color: white;
-        position: absolute;
-        top: 65%;
-        width: 70%;
+        // top: 77%;
+        width: 100%;
         background-color: rgba(0, 0, 0, 0.7);
     }
 }
-
-// .test:hover {
-//     display: inline-block;
-//     margin: 0 0.5rem;
-//     animation: bounce;
-
-/* referring directly to the animation's @keyframe declaration */
-
-// animation-duration: 2s;
-
-/* don't forget to set a duration! */
-
-// }
-//-------------------
-
-/* ---- reset ---- */
-
-// body {
-//     margin: 0;
-//     font: normal 75% Arial, Helvetica, sans-serif;
-// }
-// canvas {
-//     display: block;
-//     vertical-align: bottom;
-// }
-//--------------------
-
-/* ---- particles.js container ---- */
-
-// #particles-js {
-//     position: fixed;
-//     width: 100%;
-//     height: 100%;
-//     background-color: #1ca3e1;
-//     background-image: url("");
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: 50% 50%;
-// }
-
-/* ---- stats.js ---- */
-
-// .count-particles {
-//     background: #121285;
-//     position: absolute;
-//     top: 48px;
-//     left: 0;
-//     width: 80px;
-//     color: #13E8E9;
-//     font-size: .8em;
-//     text-align: left;
-//     text-indent: 4px;
-//     line-height: 14px;
-//     padding-bottom: 2px;
-//     font-family: Helvetica, Arial, sans-serif;
-//     font-weight: bold;
-// }
-// .js-count-particles {
-//     font-size: 1.1em;
-// }
-// #stats,
-// .count-particles {
-//     -webkit-user-select: none;
-//     margin-top: 5px;
-//     margin-left: 5px;
-// }
-// #stats {
-//     border-radius: 3px 3px 0 0;
-//     overflow: hidden;
-// }
-// .count-particles {
-//     border-radius: 0 0 3px 3px;
-// }
